docs: move docs to GitHub Pages
- create documentation structure for GitHub Pages
- create configuration for mkdocs and mike
- create CI for GitHub Pages
- add Google verification tag
- optimize CI workflows